--- a/projects/01.es6node/views/home.ejs
+++ b/projects/01.es6node/views/home.ejs
@@ -13,8 +13,6 @@
 <body>
     <h1>React JS Learning</h1>
     <div id="root"></div>
-    <script type="text/babel">
-        ReactDOM.render(<h1>ReactJS Khoa Pham</h1>,document.getElementById('root'));
-    </script>
+    <script type="text/babel" src="vidu1.js"></script>
 </body>
 </html>
