--- a/projects/01.es6node/views/home.ejs
+++ b/projects/01.es6node/views/home.ejs
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+    <script crossorigin src="react.js"></script>
+    <script crossorigin src="reactdom.js"></script>
     <!-- Load Babel -->
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="babel.js"></script>
 </head>
 <body>
     <h1>React JS Learning</h1>
